0.2.7
Fixed not cancelling quit with unsaved files.
Updated kkedit-plugins.h so plugins will need updateding as well.
Added some debug code ( only for devs ).
Removed foldernames and backup (*~) files to open from tab popup.
Added debug level to configure ( defaults to 0 no debug info ).
When opening file from tab dop down now opens file adjacent to current tab.
Fixed errant characters when searching gtk docs.
Fixed minor bug displaying help in browser.
Fixed highlight colour when highlighting all in find/replace.
Now checks for binary data and asks whether to continue loading.
Fixed d'n'd in prefs, again!
Seaching for defines now searches for case sensitive then case insensitive.
Fixed regex find, again!
Moved 'Sort/Select Tab' menus to Edit menu.
Added 'Select Tab' to File menu to select a tab by name. 
Fixed "Open Include" not setting file prefs properly.
Fixed dragging icons in prefs not working.

0.2.6
Removed redundant 'Restore Session With Bookmarks' bookmarks are now reloaded by default.
All tabs updated at once when restoring session.
Jumping to bookmark now also places cursor at bookmark.
Plugins can now use restore session routine.
Fixed minor dnd bug.
Added barber pole to restore session.
Fixed numerous minor widget sensitivity bugs.
Plugin folder changed is now ~/.KKEdit/plugins-gtk.
Fixed minor memory leak.
Made switchPage callback visible to plugins.
Stoped horizontal scrollbar flashing up when wrap lines is active.
Removed some small error messages from startup.
Fixed minor free bug when docviewer is disabled.

Updated help file and translations.
Fixed odd characters in tab name when truncated with elipses.
Fixed crash when ctags gets confused and produces an enormous function name.
Added 'Sort Tabs' to file menu.
Fixed some minor encoding to UTF8 bugs.
Fixed bug when loading certain html files.
Fixed minor callback bug in prefs/plugin prefs.
Speeded up load session.
Code clean.
Fixed bug where closing too many tabs too fast caused a segfault.