@@ -1,5 +1,5 @@
 DOXYFILE_ENCODING=UTF-8
-PROJECT_NAME="KKEdit"
+PROJECT_NAME="Clipboard Viewer"
 OUTPUT_DIRECTORY=
 CREATE_SUBDIRS=NO
 ALLOW_UNICODE_NAMES=NO
@@ -153,7 +153,7 @@ GRAPHICAL_HIERARCHY=YES
 DIRECTORY_GRAPH=YES
 DOT_IMAGE_FORMAT=svg
 INTERACTIVE_SVG=YES
-DOT_GRAPH_MAX_NODES=1000
+DOT_GRAPH_MAX_NODES=50
 MAX_DOT_GRAPH_DEPTH=0
 DOT_TRANSPARENT=YES
 DOT_MULTI_TARGETS=YES
