@@ -1,6 +1,7 @@
 0.2.7
+Loading files with binary data now loads as much data as it can until an invalid character is encountered.
 Fixed not cancelling quit with unsaved files.
-Updated kkedit-plugins.h so plugins will need updateding as well.
+Updated kkedit-plugins.h so plugins will need updating as well.
 Added some debug code ( only for devs ).
 Removed foldernames and backup (*~) files to open from tab popup.
 Added debug level to configure ( defaults to 0 no debug info ).
